[gd_scene load_steps=5 format=3 uid="uid://1b6isml7mpuj"]

[ext_resource type="Script" uid="uid://dtwi2um6irg35" path="res://scripts/UIManager.gd" id="1_nt7q6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqmmt"]
bg_color = Color(0.34581324, 0.6880342, 0.4077181, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp3eg"]
bg_color = Color(0.18887457, 0.709638, 0.3718597, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ld40"]
bg_color = Color(0.7618571, 0.5580731, 0.2331424, 1)

[node name="UI" type="CanvasLayer" node_paths=PackedStringArray("level_completed_panel", "game_over_panel")]
script = ExtResource("1_nt7q6")
level_completed_panel = NodePath("LevelCompletedPanel")
game_over_panel = NodePath("GameOverPanel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="CoinLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Coins: XXX"

[node name="LivesLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lives: XXX"

[node name="LevelCompletedPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelCompletedPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -55.0
offset_right = 68.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Level Complete !!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLevelButton" type="Button" parent="LevelCompletedPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -16.5
offset_right = 79.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_gqmmt")
text = "Goto Next Level"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -79.0
offset_right = 68.5
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -38.0
offset_right = 106.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReplayButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dp3eg")
text = "Replay"

[node name="MenuButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0ld40")
text = "Menu"

[node name="VolumeContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -171.0
offset_top = 11.0
offset_right = -7.0
offset_bottom = 61.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VolumeContainer/HBoxContainer"]
layout_mode = 2
text = "BGM"

[node name="BGMHSlider" type="HSlider" parent="VolumeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="VolumeContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="VolumeContainer/HBoxContainer2"]
layout_mode = 2
text = "SFX"

[node name="SFXHSlider" type="HSlider" parent="VolumeContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
